# energy-efficiency-analyzer

./: .pre-commit-config.yaml  README.md  energy_report.md  main.py  pyproject.toml  report.md
analyzer/: estimator.py  profiler.py  repo_fetch_files.py  report_generator.py  static_analyzer.py  suggester.py
cli/: main.py
examples/: inefficient_script.py
tests/: test_cli.py  test_estimator.py  test_profiler.py  test_repo_fetch_files.py  test_report_generator.py  test_static_analyzer.py  test_suggester.py
